@@ -707,3 +707,4 @@
     - リソース名ゼロの扱いを修正。
     - TEXTINCLUDE 1 を実装。
     - 多くのメモリリークを修正。
+    - MP3音声のサポート。
