@@ -178,6 +178,11 @@ IDR_MAINFRAME EMF "res/Emf_100.emf"
 IDR_MAINFRAME GIF "res/Gif_100.gif"
 
 //////////////////////////////////////////////////////////////////////////////
+// MP3
+
+IDR_MAINFRAME MP3 "res/MP3_100.mp3"
+
+//////////////////////////////////////////////////////////////////////////////
 // PNG
 
 IDR_MAINFRAME PNG "res/Png_100.png"
