@@ -1645,6 +1645,8 @@ STRINGTABLE
     IDS_GENERATEDFROMTEXTINCLUDE, "// Generiert aus TEXTINCLUDE %u\r\n"
     IDS_TEXTINCLUDEREADONLY, "Diese Datei ist durch TEXTINCLUDE 1 schreibgeschützt.\r\n\r\nMöchten Sie trotzdem in die Datei schreiben?"
     IDS_INCLUDETEXTINCLUDE3, "TEXTINCLUDE 3 enthält Ressourcenelemente, die nicht bearbeitet werden können.\r\n\r\nMöchten Sie die Elemente in TEXTINCLUDE 3 als bearbeitbare Elemente einschließen und TEXTINCLUDE 3 zurücksetzen?"
+    IDS_MP3RESBINFILTER, "MP3 Sound (*.mp3)|*.mp3|Binäre Ressourcen (*.res)|*.res|Binärdateien (*.bin)|*.bin|Alle Dateien (*.*)|*.*|"
+	IDS_MP3SOUND, "(MP3 Sound)"
 }
 
 //////////////////////////////////////////////////////////////////////////////
