@@ -1648,6 +1648,8 @@ STRINGTABLE
     IDS_GENERATEDFROMTEXTINCLUDE, "// Generado a partir de TEXTINCLUDE %u\r\n"
     IDS_TEXTINCLUDEREADONLY, "Este archivo está protegido contra escritura mediante TEXTINCLUDE 1.\r\n\r\n¿Aún desea escribir en el archivo?"
     IDS_INCLUDETEXTINCLUDE3, "TEXTINCLUDE 3 contiene elementos de recursos que no se pueden editar.\r\n\r\n¿Desea incluir los elementos en TEXTINCLUDE 3 como elementos editables y restablecer TEXTINCLUDE 3?"
+    IDS_MP3RESBINFILTER, "Audio MP3 (*.mp3)|*.mp3|Recursos Binarios (*.res)|*.res|Archivos Binarios (*.bin)|*.bin|Todos los Archivos (*.*)|*.*|"
+	IDS_MP3SOUND, "(Audio MP3)"
 }
 
 //////////////////////////////////////////////////////////////////////////////
