@@ -1645,6 +1645,8 @@ STRINGTABLE
     IDS_GENERATEDFROMTEXTINCLUDE, "// Luotu tekstistä TEXTINCLUDE %u\r\n"
     IDS_TEXTINCLUDEREADONLY, "Tämä tiedosto on kirjoitussuojattu tekstillä TEXTINCLUDE 1.\r\n\r\nHaluatko silti kirjoittaa tiedostoon?"
     IDS_INCLUDETEXTINCLUDE3, "TEXTINCLUDE 3 sisältää resurssikohteita, joita ei voi muokata.\r\n\r\nHaluatko sisällyttää TEXTINCLUDE 3:n kohteet muokattaviksi kohteiksi ja nollata TEXTINCLUDE 3:n?"
+    IDS_MP3RESBINFILTER, "MP3 ääni (*.mp3)|*.mp3|Binaariset resurssit (*.res)|*.res|Binaariset tiedostot (*.bin)|*.bin|Kaikki tiedostot (*.*)|*.*|"
+	IDS_MP3SOUND, "(MP3 ääni)"
 }
 
 //////////////////////////////////////////////////////////////////////////////
