@@ -1645,6 +1645,8 @@ STRINGTABLE
     IDS_GENERATEDFROMTEXTINCLUDE, "// Généré à partir de TEXTINCLUDE %u\r\n"
     IDS_TEXTINCLUDEREADONLY, "Ce fichier est protégé en écriture par TEXTINCLUDE 1.\r\n\r\nVoulez-vous toujours écrire dans le fichier ?"
     IDS_INCLUDETEXTINCLUDE3, "TEXTINCLUDE 3 contient des éléments de ressources qui ne peuvent pas être modifiés.\r\n\r\nVoulez-vous inclure les éléments dans TEXTINCLUDE 3 en tant qu'éléments modifiables et réinitialiser TEXTINCLUDE 3 ?"
+    IDS_MP3RESBINFILTER, "MP3 Sound (*.mp3)|*.mp3|Ressources binaires (*.res)|*.res|Fichiers binaires (*.bin)|*.bin|Tous les fichiers (*.*)|*.*|"
+	IDS_MP3SOUND, "(MP3 Sound)"
 }
 
 //////////////////////////////////////////////////////////////////////////////
