@@ -1646,6 +1646,8 @@ STRINGTABLE
     IDS_GENERATEDFROMTEXTINCLUDE, "// Generato da TEXTINCLUDE %u\r\n"
     IDS_TEXTINCLUDEREADONLY, "Questo file è protetto da scrittura da TEXTINCLUDE 1.\r\n\r\nVuoi ancora scrivere nel file?"
     IDS_INCLUDETEXTINCLUDE3, "TEXTINCLUDE 3 contiene elementi risorse che non possono essere modificati.\r\n\r\nVuoi includere gli elementi in TEXTINCLUDE 3 come elementi modificabili e reimpostare TEXTINCLUDE 3?"
+    IDS_MP3RESBINFILTER, "File audio MP3 (*.mp3)|*.mp3|File risorse binarie (*.res)|*.res|File binario (*.bin)|*.bin|Tutti i file (*.*)|*.*|"
+	IDS_MP3SOUND, "(File audio MP3)"
 }
 
 //////////////////////////////////////////////////////////////////////////////
