@@ -1649,6 +1649,8 @@ STRINGTABLE
     IDS_GENERATEDFROMTEXTINCLUDE, "// Generated from TEXTINCLUDE %u\r\n"
     IDS_TEXTINCLUDEREADONLY, "このファイルは TEXTINCLUDE 1 により書き込み禁止になっています。\r\n\r\nそれでもファイルに書き込みますか？"
     IDS_INCLUDETEXTINCLUDE3, "TEXTINCLUDE 3 に編集できないリソース項目が含まれています。TEXTINCLUDE 3 の項目を編集可能な項目として取り込んで TEXTINCLUDE 3 をリセットしますか？"
+    IDS_MP3RESBINFILTER, "MP3音声 (*.mp3)|*.mp3|バイナリ リソース (*.res)|*.res|バイナリ ファイル (*.bin)|*.bin|すべてのファイル (*.*)|*.*|"
+	IDS_MP3SOUND, "(MP3音声)"
 }
 
 //////////////////////////////////////////////////////////////////////////////
