@@ -1644,6 +1644,8 @@ STRINGTABLE
     IDS_GENERATEDFROMTEXTINCLUDE, "// 从 TEXTINCLUDE %u 生成\r\n"
     IDS_TEXTINCLUDEREADONLY, "该文件受 TEXTINCLUDE 1 写保护。\r\n\r\n您仍要写入该文件吗？"
     IDS_INCLUDETEXTINCLUDE3, "TEXTINCLUDE 3 包含无法编辑的资源项。\r\n\r\n是否要将 TEXTINCLUDE 3 中的项包含为可编辑项并重置 TEXTINCLUDE 3？"
+    IDS_MP3RESBINFILTER, "MP3声音 (*.mp3)|*.mp3|资源文件(*.res)|*.res|二进制文件 (*.bin)|*.bin|全部文件 (*.*)|*.*|"
+	IDS_MP3SOUND, "(MP3声音)"
 }
 
 //////////////////////////////////////////////////////////////////////////////
