@@ -1643,6 +1643,8 @@ STRINGTABLE
     IDS_GENERATEDFROMTEXTINCLUDE, "// 從 TEXTINCLUDE %u 生成\r\n"
     IDS_TEXTINCLUDEREADONLY, "該文件受 TEXTINCLUDE 1 寫入保護。 \r\n\r\n您仍要寫入該檔案嗎？"
     IDS_INCLUDETEXTINCLUDE3, "TEXTINCLUDE 3 包含無法編輯的資源項。 \r\n\r\n是否要將 TEXTINCLUDE 3 中的項包含為可編輯項並重設 TEXTINCLUDE 3？"
+    IDS_MP3RESBINFILTER, "MP3聲音 (*.mp3)|*.mp3|資源文件(*.res)|*.res|二進位制文件 (*.bin)|*.bin|全部文件 (*.*)|*.*|"
+	IDS_MP3SOUND, "(MP3聲音)"
 }
 
 //////////////////////////////////////////////////////////////////////////////
