@@ -354,6 +354,8 @@
 #define IDS_GENERATEDFROMTEXTINCLUDE        351
 #define IDS_TEXTINCLUDEREADONLY             352
 #define IDS_INCLUDETEXTINCLUDE3             353
+#define IDS_MP3RESBINFILTER                 354
+#define IDS_MP3SOUND                        355
 
 #define ID_NEW                              100
 #define ID_OPEN                             101
