@@ -1,1 +1,1 @@
-#include "../../resource.h"
+#include "..\..\resource.h"
